--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "lumen-login-app",
+  "name": "lumen-login-app-v2",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "firebase": "^9.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "firebase": "9.22.2"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
